[package]
name = "cryptopia-hybridkem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-compact = "2.0.4"
pqc_kyber = { version = "0.7.1", features = ["std", "rand", "kyber768"] }
cryptopia-seed = {path = "../cryptopia-seed"}
rand = "0.8.5"

[dev-dependencies]
base64 = "0.21.5"
