[package]
name = "cryptopia-kem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqc_kyber = { version = "0.7.1", features = ["std", "rand"] }
rand = "0.8.5"

[dev-dependencies]
base64 = "0.21.5"
base85 = "2.0.0"
