[package]
name = "sare-cli"
version = "0.1.1"
edition = "2024"

authors = ["Zola Gonano <zolagonano@protonmail.com>", "Sare Project"]
description = "Command-line interface for the SARE encryption standard."
license = "MIT OR Apache-2.0"
readme = "README.md"  
repository = "https://github.com/SareProject/sare"  
homepage = "https://sareproject.github.io"
documentation = "https://sareproject.github.io/docs"
keywords = ["crypto", "encryption", "post-quantum", "security", "rust"]  
categories = ["cryptography", "command-line-utilities", "development-tools"]  

default-run = "sare-cli"

[[bin]]
name = "sare-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.41"
colored = "3.0.0"
dirs = "6.0.0"
duration-str = "0.17.0"
hex = "0.4.3"
indicatif = "0.18.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
read-stdin = "1.1.1"
rpassword = "7.3.1"
sare-lib = "0.1.1"
secrecy = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
