[package]
name = "sare-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-kw = "0.2.1"
bson = "2.7.0"
byteorder = "1.5.0"
crystals-dilithium = "1.0.0"
ed25519-compact = "2.0.4"
generic-array = "1.0.0"
pqc_kyber = { version = "0.7.1", features = ["std", "rand", "kyber768"] }
rand = "0.8.5"
ring = "0.17.6"
scrypt = "0.11.0"
secrecy = { version = "0.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
sha3 = "0.10.8"
tiny-bip39 = { version = "1.0.0", default-features = false }

[dev-dependencies]
base64 = "0.21.5"
