[package]
name = "sare-core"
version = "0.1.0"
edition = "2024"

authors = ["Zola Gonano <zolagonano@protonmail.com>", "Sare Project"]
description = "Core library for the SARE encryption standard."
license = "MIT OR Apache-2.0"
readme = "README.md"  
repository = "https://github.com/SareProject/sare"  
homepage = "https://sareproject.github.io"
documentation = "https://sareproject.github.io/docs"
keywords = ["crypto", "encryption", "post-quantum", "security", "rust"]  
categories = ["cryptography", "command-line-utilities", "development-tools"]  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-kw = "0.2.1"
bson = "2.7.0"
byteorder = "1.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
crystals-dilithium = "1.0.0"
ed25519-compact = "2.0.4"
generic-array = "1.0.0"
hkdf = "0.12.4"
pem = "3.0.3"
pqc_kyber = { version = "0.7.1", features = ["std", "rand", "kyber768"] }
rand = "0.8.5"
scrypt = "0.11.0"
secrecy = { version = "0.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.17"
sha2 = "0.10.8"
sha3 = "0.10.8"
tiny-bip39 = { version = "1.0.0", default-features = false }

[dev-dependencies]
base64 = "0.21.5"
